# rubik

./: CMakeLists.txt
cube/: cube.c
src/: main.c  rubik.c  rubik.h  rubik_move.c  rubik_move.h  rubik_parser.c  rubik_parser.h  rubik_x.c  rubik_x.h
src/move/: rubik_move.c  rubik_move.h  rubik_move_d.c  rubik_move_u.c
test/: rubik_test.h  rubik_test.sh  test_move_u.c
